# simple_math_lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  sonarcloud.yml
src/: CMakeLists.txt  main.cpp
src/math_lib/: CMakeLists.txt  math_lib.cpp
src/math_lib/include/: math_lib.h
tests/: CMakeLists.txt  math_library_tests.cpp
